--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,51 @@
     <title>MyMoney Manager</title>
     <!-- Link External CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Link Tailwind CSS  -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Link Bootstrap CSS  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
+    <!-- Header Section -->
     <header>
-        <h1>MyMoney Manager</h1>
+        <h2 class="text-center my-4 fw-bolder text-success">MyMoney Manager</h2>
     </header>
+    <!-- Main Section  -->
+    <main>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-md-6 col-lg-6">
+                        <img class=" h-75 w-100 border rounded" src="img/Money manager-2.jpg" alt="">
+                    </div>
+                    <div class="col col-md-6 col-lg-6 bg-light h-75">
+                        <div class="text-center">
+                            <h5 class="text-center my-4 fw-bold">Income</h5>
+                            <span class="me-2 fw-bolder">Income: </span><input class="bg-light" type="text">
+                            <h5 class="text-center my-4 fw-bold">Expenses</h5>
+                            <span class="me-4 fw-bolder mb-4">Food: </span><input class="bg-light" type="text"><br><br>
+                            <span class="me-4 fw-bolder mb-4">Rent: </span><input class="bg-light" type="text"><br><br>
+                            <span class=" me-2 fw-bolder mb-4">Clothes: </span><input class="bg-light"
+                                type="text"><br><br>
+                            <button type="button" class="btn btn-primary px-5">Calculate</button>
+                            <h5 class="text-center my-3 fw-bold">Total Expenses: $00</h5>
+                            <h5 class="text-center my-3 fw-bold">Balance: $00</h5>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </section>
+    </main>
 
+    <!-- Link Bootstrap JS  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Link External JS  -->
     <script src="js/script.js"></script>
 </body>
+
 </html>
