--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <h2 class="text-center my-4 fw-bolder text-success">MyMoney Manager</h2>
+        <h2 class="text-center my-4 fw-bolder text-warning">MyMoney Manager</h2>
     </header>
     <!-- Main Section  -->
     <main>
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-md-6 col-lg-6">
-                        <img class=" h-75 w-100 border rounded" src="img/Money manager-2.jpg" alt="">
+                        <img class=" h-75 w-100 border rounded" src="img/Money manager-1.jpg" alt="">
                     </div>
                     <div class="col col-md-6 col-lg-6 bg-light h-75">
                         <div class="text-center">
@@ -36,8 +36,13 @@
                             <span class=" me-2 fw-bolder mb-4">Clothes: </span><input class="bg-light"
                                 type="text"><br><br>
                             <button type="button" class="btn btn-primary px-5">Calculate</button>
-                            <h5 class="text-center my-3 fw-bold">Total Expenses: $00</h5>
-                            <h5 class="text-center my-3 fw-bold">Balance: $00</h5>
+                            <h5 class="text-center my-4 fw-bold">Total Expenses: $00</h5>
+                            <h5 class="text-center my-4 fw-bold">Balance: $00</h5>
+                            <p><span class="me-2 fw-bolder">Save: </span><span><input type="text"
+                                        class="save-input bg-light"></span><span class="mx-3">%</span><span><button
+                                        type="button" class="btn btn-primary px-4">Save</button></span></p>
+                            <h5 class="text-center my-4 fw-bold">Saving Amount: $00</h5>
+                            <h5 class="text-center my-4 fw-bold">Remaining Balance: $00</h5>
                         </div>
                     </div>
 
