--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyMoney Manager</title>
-    <!-- Link External CSS -->
-    <link rel="stylesheet" href="css/style.css">
     <!-- Link Bootstrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Link Bootstrap JS  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <!-- Link External CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -22,27 +27,32 @@
     <main>
         <section>
             <div class="container">
-                <div class="row">
-                    <div class="col col-md-6 col-lg-6">
-                        <img class=" h-75 w-100 border rounded" src="img/Money manager-1.jpg" alt="">
+                <div class="row g-2">
+                    <div class="col-12 col-md-6 col-lg-6 me-5">
+                        <img class="img w-100 border rounded" src="img/Money manager-1.jpg" alt="">
                     </div>
-                    <div class="col col-md-6 col-lg-6 bg-light h-75">
+                    <div class="col-12 col-md-5 col-lg-5 bg-light h-75 border rounded ms-2">
                         <div class="text-center">
                             <h5 class="text-center my-4 fw-bold">Income</h5>
-                            <span class="me-2 fw-bolder">Income: </span><input class="bg-light" type="text">
+                            <span class="me-2 fw-bolder">Income: </span><input id="income-input" class="bg-light"
+                                type="text">
                             <h5 class="text-center my-4 fw-bold">Expenses</h5>
-                            <span class="me-4 fw-bolder mb-4">Food: </span><input class="bg-light" type="text"><br><br>
-                            <span class="me-4 fw-bolder mb-4">Rent: </span><input class="bg-light" type="text"><br><br>
-                            <span class=" me-2 fw-bolder mb-4">Clothes: </span><input class="bg-light"
+                            <span class="me-4 fw-bolder mb-4">Food: </span><input id="food-input" class="bg-light"
                                 type="text"><br><br>
-                            <button type="button" class="btn btn-primary px-5">Calculate</button>
-                            <h5 class="text-center my-4 fw-bold">Total Expenses: $00</h5>
-                            <h5 class="text-center my-4 fw-bold">Balance: $00</h5>
-                            <p><span class="me-2 fw-bolder">Save: </span><span><input type="text"
+                            <span class="me-4 fw-bolder mb-4">Rent: </span><input id="rent-input" class="bg-light"
+                                type="text"><br><br>
+                            <span class=" me-2 fw-bolder mb-4">Clothes: </span><input id="clothes-input"
+                                class="bg-light" type="text"><br><br>
+                            <button type="button" id="calculate-button" class="btn btn-primary px-5">Calculate</button>
+                            <h5 class="text-center my-4 fw-bold">Total Expenses: $<span id="total-expenses">00</span>
+                            </h5>
+                            <h5 class="text-center my-4 fw-bold">Balance: $<span id="balance">00</span></h5>
+                            <p><span class="me-2 fw-bolder">Save: </span><span><input id="save-input" type="text"
                                         class="save-input bg-light"></span><span class="mx-3">%</span><span><button
-                                        type="button" class="btn btn-primary px-4">Save</button></span></p>
-                            <h5 class="text-center my-4 fw-bold">Saving Amount: $00</h5>
-                            <h5 class="text-center my-4 fw-bold">Remaining Balance: $00</h5>
+                                        id="save-button" type="button" class="btn btn-primary px-4">Save</button></span>
+                            </p>
+                            <h5 class="text-center my-4 fw-bold">Saving Amount: $<span  id="saving-amount">00</span></h5>
+                            <h5 class="text-center my-4 fw-bold">Remaining Balance: $ <span id="remaining-balance">00</span></h5>
                         </div>
                     </div>
 
@@ -51,10 +61,7 @@
         </section>
     </main>
 
-    <!-- Link Bootstrap JS  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
 
     <!-- Link External JS  -->
     <script src="js/script.js"></script>
