--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                                         class="save-input bg-light"></span><span class="mx-3">%</span><span><button
                                         id="save-button" type="button" class="btn btn-primary px-4">Save</button></span>
                             </p>
-                            <h5 class="text-center my-4 fw-bold">Saving Amount: $<span  id="saving-amount">00</span></h5>
-                            <h5 class="text-center my-4 fw-bold">Remaining Balance: $ <span id="remaining-balance">00</span></h5>
+                            <h5 class="text-center my-4 fw-bold">Saving Amount: $<span id="saving-amount">00</span></h5>
+                            <h5 class="text-center my-4 fw-bold">Remaining Balance: $<span
+                                    id="remaining-balance">00</span></h5>
                         </div>
                     </div>
 
