--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="text-center">
                             <h5 class="text-center my-4 fw-bold">Income</h5>
                             <span class="me-2 fw-bolder">Income: </span><input id="income-input" class="bg-light"
-                                type="text">
+                                type="text" placeholder="$ Enter Your Income">
                             <h5 class="text-center my-4 fw-bold">Expenses</h5>
                             <span class="me-4 fw-bolder mb-4">Food: </span><input id="food-input" class="bg-light"
                                 type="text"><br><br>
